# beadando_2

./: BuildState.cpp  BuildState.h  CMakeLists.txt  Flow.cpp  Flow.h  Grid.cpp  Grid.h  GridPosition.cpp  GridPosition.h  Phase.cpp  Phase.h  PipeLine.cpp  PipeLine.h  PipeLineBuilder.cpp  PipeLineBuilder.h  PipeLineValidator.cpp  PipeLineValidator.h  Stock.cpp  Stock.h  Tile.cpp  Tile.h  csovesteszt.cpp  doctest.h  feladat1.cst  feladat3.cst  feladat4.cst  feladat5.cst  feladat5b.cst  feladat6.cst  feladat6b.cst  feladat7.cst  feladat8.cst  feladat9.cst  feladat9x.cst  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signs.md  v_feladat1.cst  (+9 more)
